--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,18 @@
 ---
+    const pageTitle = "Mi blog de Astro aprendizaje"
+
+    const identity = {
+        firstName: "Nicolas",
+        country: "Argentina",
+        occupation: "Estudiante",
+        hobbies: ["fotografia", "observación de aves", "peñarol"],
+    }
+
+    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
+
+    const happy = true;
+    const finished = false;
+    const goal = 3;
 
 ---
 
@@ -8,7 +22,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Blog</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
         <a href="/">Inicio</a>
@@ -17,6 +31,30 @@
 
         <h1>Mi blog de Astro aprendizaje</h1>
         <p>Aquí es donde publicaré sobre mi viaje de aprendizaje Astro.</p>
+        <ul>
+            <li><a href="/posts/post-1">Publicación 1</a></li>
+            <li><a href="/posts/post-2">Publicación 2</a></li>
+            <li><a href="/posts/post-3">Publicación 3</a></li>
+        </ul>
 
+            <p>He aquí algunos datos sobre mí:</p>
+        <ul>
+            <li>Me llamo {identity.firstName}.</li>
+            <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
+            {identity.hobbies.length >= 2 &&
+                <li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
+            }
+        </ul>
+            <p>Mis habilidades son:</p>
+        <ul>
+            {skills.map((skill) => <li>{skill}</li>)}
+        </ul>
+
+
+        {happy && <p>¡Estoy feliz de aprender Astro!</p>}
+
+        {finished && <p>¡He terminado este tutorial!</p>}
+
+        {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
     </body>
 </html>
