--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,23 @@
 ---
+
 const pageTitle = "Sobre mi"
+
+const identity = {
+        firstName: "Nicolas",
+        country: "Argentina",
+        occupation: "Estudiante",
+        hobbies: ["fotografia", "observación de aves", "peñarol"],
+    }
+
+    const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Redacción de documentos"];
+
+    const happy = true;
+    const finished = false;
+    const goal = 3;
+
+	const skillColor = "navy";
+	const fontWeight = "bold";
+	const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -21,5 +39,40 @@ const pageTitle = "Sobre mi"
         <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
     
         <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
-    </body>
+		
+		<p>He aquí algunos datos sobre mí:</p>
+        <ul>
+            <li>Me llamo {identity.firstName}.</li>
+            <li>Vivo en {identity.country} y trabajo como {identity.occupation}.</li>
+            {identity.hobbies.length >= 2 &&
+                <li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
+            }
+        </ul>
+            <p>Mis habilidades son:</p>
+        <ul>
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
+        </ul>
+
+
+        {happy && <p>¡Estoy feliz de aprender Astro!</p>}
+
+        {finished && <p>¡He terminado este tutorial!</p>}
+
+        {goal === 3 ? <p>Mi objetivo es terminar en 3 días.</p> : <p>Mi objetivo no son 3 días.</p>}
+    
+	
+	
+	</body>
+
+	<style define:vars={{skillColor,fontWeight,textCase}}>
+		h1 {
+			color: purple;
+			font-size: 4rem;
+		}
+		.skill {
+			color: var(--skillColor);
+			font-weight: var(--fontWeight);
+    		text-transform: var(--textCase);
+		}
+	</style>
 </html>
