add styles globals and locals

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import '../styles/global.css';
 
 const pageTitle = "Sobre mi"
 
@@ -15,7 +16,7 @@ const identity = {
     const finished = false;
     const goal = 3;
 
-	const skillColor = "navy";
+	const skillColor = "green";
 	const fontWeight = "bold";
 	const textCase = "uppercase";
 ---
