--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import HeaderButton from '../components/HeaderButton.astro';
 import '../styles/global.css';
 
 const pageTitle = "Sobre mi"
@@ -30,12 +31,25 @@ const identity = {
 		<title>{pageTitle}</title>
 	</head>
 	<body>
-        <a href="/">Inicio</a>
-        <a href="/about/">Sobre mi</a>
-        <a href="/blog/">Blog</a>
+        <header  class="py-8 px-4 mx-auto max-w-xl lg:py-16 lg:px-6">
+			<div class="mx-auto text-center">
+                    <h1 class="text-5xl tracking-tight font-extrabold text-purple-700">{pageTitle}</h1>
+                    <h2 class="font-light text-gray-500 sm:text-xl dar:text-gray-400">...¡y mi nuevo sitio Astro!</h2>
+			</div>
+		</header>
+        <nav class="flex flex-col items-center justify-between w-full text-center md:flex-row mb-5">
+			<HeaderButton class="text-white" href="/">Inicio
+				<svg  slot="after"  width="24"  height="24"  viewBox="0 0 24 24"  fill="currentColor"  class="icon icon-tabler icons-tabler-filled icon-tabler-star"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M8.243 7.34l-6.38 .925l-.113 .023a1 1 0 0 0 -.44 1.684l4.622 4.499l-1.09 6.355l-.013 .11a1 1 0 0 0 1.464 .944l5.706 -3l5.693 3l.1 .046a1 1 0 0 0 1.352 -1.1l-1.091 -6.355l4.624 -4.5l.078 -.085a1 1 0 0 0 -.633 -1.62l-6.38 -.926l-2.852 -5.78a1 1 0 0 0 -1.794 0l-2.853 5.78z" /></svg>	
+			</HeaderButton>
+			<HeaderButton class="text-white" href="/about/">Sobre mi
+				<svg  slot="after"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-info-circle"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 12a9 9 0 1 0 18 0a9 9 0 0 0 -18 0" /><path d="M12 9h.01" /><path d="M11 12h1v4h1" /></svg>
+			</HeaderButton>
+			<HeaderButton class="text-white" href="/blog/">Blog
+				<svg  slot="after"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-article"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" /><path d="M7 8h10" /><path d="M7 12h10" /><path d="M7 16h10" /></svg>
+			</HeaderButton>
+		</nav>
 
-		<h1>{pageTitle}</h1>
-        <h2>...¡y mi nuevo sitio Astro!</h2>
+		
 	
         <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
     
@@ -49,12 +63,7 @@ const identity = {
                 <li>Dos de mis aficiones son: {identity.hobbies[0]} y {identity.hobbies[1]}</li>
             }
         </ul>
-            <p>Mis habilidades son:</p>
-        <ul>
-            {skills.map((skill) => <li class="skill">{skill}</li>)}
-        </ul>
-
-
+    
         {happy && <p>¡Estoy feliz de aprender Astro!</p>}
 
         {finished && <p>¡He terminado este tutorial!</p>}
@@ -65,15 +74,5 @@ const identity = {
 	
 	</body>
 
-	<style define:vars={{skillColor,fontWeight,textCase}}>
-		h1 {
-			color: purple;
-			font-size: 4rem;
-		}
-		.skill {
-			color: var(--skillColor);
-			font-weight: var(--fontWeight);
-    		text-transform: var(--textCase);
-		}
-	</style>
+	
 </html>
