--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,14 +35,14 @@ h1 {
     width: 40px;
     height: 5px;
     margin-bottom: 10px;
-    background-color: #ff9776;
+    background-color: #A855F7;
 }
 
 .nav-links {
     width: 100%;
     top: 5rem;
     left: 48px;
-    background-color: #ff9776;
+    background-color: #A855F7;
     display: none;
     margin: 0;
 }
@@ -59,7 +59,7 @@ h1 {
 
 .nav-links a:hover,
 .nav-links a:focus {
-    background-color: #ff9776;
+    background-color: #A855F7;
 }
 
 .expanded {
