--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const {pageTitle} = Astro.props;
     </head>
     <body>
         <Header />
-        <h1>{pageTitle}</h1>
+        <h1 class="mb-4 text-5xl tracking-tight font-extrabold text-purple-500">{pageTitle}</h1>
         <slot />
         <Footer />
         <script>
