continue whit blog

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,15 +3,13 @@
     
     const platform = "github"
     const username = "nicorame"
-
-
-
 ---
 <style>
     footer {
-        display: felx;
+        display: flex;
         gap: 1rem;
-        margin-top: 2rem;
+        margin-top: 3rem;
+        text-align: center;
     }
 </style>
 
