--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,6 +23,7 @@ body {
 h1 {
     margin: 1rem 0;
     font-size: 2.5rem;
+    text-align: center;
 }
 
 .hamburger {
@@ -45,6 +46,8 @@ h1 {
     background-color: #A855F7;
     display: none;
     margin: 0;
+    text-align: center;
+    
 }
 
 .nav-links a {
@@ -55,6 +58,7 @@ h1 {
     font-size: 1.2rem;
     font-weight: bold;
     text-transform: uppercase;
+    border-radius: 28px;
 }
 
 .nav-links a:hover,
@@ -64,6 +68,10 @@ h1 {
 
 .expanded {
     display: unset;
+}
+
+.publicaciones {
+    margin-top: 30px;
 }
 
 @media screen and (min-width: 636px) {
