--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -10,5 +10,8 @@
         background-color: #4c1d95;
         text-decoration: none;
         border-radius: 24px;
+        font-weight: bold;
+        text-shadow: 0px 10px 15px #13151a;
+        transition: 300ms;
     }
 </style>
