--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,28 +1,14 @@
 ---
-	import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from "../layouts/BaseLayout.astro";
+const allPosts = await Astro.glob('../pages/posts/*.md');
+import BlogPost from '../components/BlogPost.astro';
+import "../styles/global.css";
 
-	import '../styles/global.css';
-
-
-    const pageTitle = "Mi blog de Astro aprendizaje"
+const pageTitle = "Mi blog de Astro aprendizaje";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/icons8-blog-96.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-	</head>
-	<body>
-		<BaseLayout pageTitle={pageTitle}>
-			<ul class="flex flex-col items-center justify-between w-full text-center">
-				<li><a href="/posts/post-1">Publicación 1</a></li>
-				<li><a href="/posts/post-2">Publicación 2</a></li>
-				<li><a href="/posts/post-3">Publicación 3</a></li>
-			</ul>
-		</BaseLayout>
-        
-    </body>
-</html>
+<BaseLayout pageTitle={pageTitle}>
+  <ul class="flex items-center justify-between w-full text-center publicaciones">
+    {allPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title} />)}
+  </ul>
+</BaseLayout>
